# typing-graph

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .vale.ini  .yamllintignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Justfile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TESTING.md  biome.json  cosmic-ray.toml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  wrangler.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml  support.yml
.github/workflows/: benchmark.yml  ci.yml  documentation.yml  release.yml
.vale/config/vocabularies/typing-graph/: accept.txt  reject.txt
docs/: acknowledgments.md  contributing.md  conventions.md  index.md  install.md  license.md  llms-full.txt  llms.txt  metadata-collection.md  roadmap.md  support.md
docs/.overrides/: main.html
docs/.overrides/partials/: toc-item.html  toc.html
docs/explanation/: architecture.md  forward-references.md  generics.md  graph-edges.md  index.md  metadata.md  qualifiers.md  type-aliases.md  union-types.md
docs/guides/: common-helpers.md  configuration.md  extracting-metadata.md  filtering-with-walk.md  index.md  metadata-filtering.md  metadata-queries.md  metadata-recipes.md  metadata-transformations.md  namespace-configuration.md  walking-type-graph.md  working-with-unions.md
docs/reference/: api.md  changelog.md  glossary.md  index.md
docs/stylesheets/: mkdocstrings.css
docs/tutorials/: first-inspection.md  functions.md  index.md  structured-types.md  traversing-type-graphs.md  working-with-metadata.md
scripts/: announce_draft.py  announce_post.py  announce_social.py  mutation-worktree.sh  profile_metadata.py  release_notes.py  uv-run  uv-run-pytest  uv-run-python  verify_testpypi.py  version_bump.py
src/typing_graph/: __init__.py  _config.py  _context.py  _exceptions.py  _helpers.py  _inspect_class.py  _inspect_function.py  _inspect_module.py  _inspect_type.py  _metadata.py  _namespace.py  _node.py  _walk.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_auto_namespace_benchmark.py  test_cache_benchmark.py  test_graph_traversal_benchmark.py  test_integration_benchmark.py  test_metadata_benchmarks.py  test_type_inspection_benchmark.py  test_walk_benchmarks.py
tests/docexamples/: conftest.py  test_explanation.py  test_guides.py  test_reference.py  test_tutorials.py
tests/integration/: conftest.py  test_cli_parameters.py  test_dependency_injection.py  test_metadata_collection.py  test_schema_generation.py  test_validation_constraints.py
tests/properties/: conftest.py  helpers.py  strategies.py  test_caching.py  test_config.py  test_determinism.py  test_graph.py  test_metadata.py  test_metadata_collection.py  test_namespace_properties.py  test_node_properties.py  test_roundtrip.py  test_type_params.py  test_walk_properties.py
tests/unit/: conftest.py  pep563_fixtures.py  test_config.py  test_context.py  test_helpers.py  test_inspect_class.py  test_inspect_function.py  test_inspect_module.py  test_inspect_type.py  test_metadata_collection.py  test_namespace.py  test_node.py  test_node_children.py  test_node_edges.py  test_normalized_unions.py  test_walk.py
